--- a/pom.xml
+++ b/pom.xml
@@ -75,26 +75,12 @@
       <artifactId>pagehelper-spring-boot-starter</artifactId>
       <version>1.4.6</version>
     </dependency>
-    <!-- Google API Client -->
+    <!-- REDIS -->
     <dependency>
-      <groupId>com.google.api-client</groupId>
-      <artifactId>google-api-client</artifactId>
-      <version>2.0.0</version>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-redis</artifactId>
     </dependency>
 
-    <!-- Google OAuth Client for Jetty -->
-    <dependency>
-      <groupId>com.google.oauth-client</groupId>
-      <artifactId>google-oauth-client-jetty</artifactId>
-      <version>1.34.1</version>
-    </dependency>
-
-    <!-- Google Drive API -->
-    <dependency>
-      <groupId>com.google.apis</groupId>
-      <artifactId>google-api-services-drive</artifactId>
-      <version>v3-rev20220815-2.0.0</version>
-    </dependency>
   </dependencies>
   <repositories>
     <repository>
